--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -40,15 +40,15 @@
             <div class="labels-container">
                 <div>
                     <label>Name</label><br />
-                    @Html.TextBox("Name")
+                    @Html.TextBoxFor(m=>m.PhoneItemFilter.Name)
                 </div>
                 <div>
                     <label>Phone</label><br />
-                    @Html.TextBox("Phone")
+                    @Html.TextBoxFor(m=>m.PhoneItemFilter.Phone)
                 </div>
                 <div>
                     <label>Adress</label><br />
-                    @Html.TextBox("Adress")
+                    @Html.TextBoxFor(m=>m.PhoneItemFilter.Address)
                 </div>
             </div> 
 
@@ -63,7 +63,6 @@
         </div>
         <button type="submit" class="button-blue button-action">Применить</button>
     </div>
-
 }
 
 <table class="table">
@@ -150,10 +149,15 @@
     const filterOn = document.querySelector(".filter-on");
     const filtersContaner = document.querySelector(".filter-container");
     const btnClose = document.querySelector(".close-btn");
+    const btnSetSettings = document.querySelector(".button-action");
     filterOn.addEventListener("click", function (e) {
         e.preventDefault();
         filtersContaner.classList.remove("hidden");
         filterOn.classList.add("hidden");
         btnClose.classList.remove("hidden");
     });
+    // btnSetSettings.addEventListener("click", function (e) { 
+    //     e.preventDefault();
+
+    // })
 </script>
